# simplex-chat-py

./: LICENSE  README.md  pyproject.toml
src/simplex-chat/: client.py
src/simplex-chat/types/: commands.py
transform/: commands.ipynb
