[project]
name = "simplex-chat"
version = "0.0.1"
authors = [{name="Ori Levenglick"}]
description = "Wrapper for the simplex-chat websocket server"
readme = "README.md"
requires-python = ">=3.9"  # TODO validate
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [  # TODO versions
    "websockets",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/o11k/simplex-chat-py"
Issues = "https://github.com/o11k/simplex-chat-py/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"